[package]
name = "parsip"
version = "0.1.0"
authors = ["Kamil Markiewicz <k.a.markiewicz@gmail.com>"]
license = "MIT"
description = "A tiny, safe, speedy, zero-copy SIP parser. Uses nom."
repository = "https://github.com/kamarkiewicz/parsip"
documentation = "https://docs.rs/parsip"
keywords = ["sip", "parser"]
categories = ["network-programming", "parser-implementations"]

[features]
default = ["std"]
std = ["nom/std"]

[dependencies.nom]
version = "^3.1"
default-features = false

[dev-dependencies]
bencher = "^0.1"

[[bench]]
name = "parse"
harness = false

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3
